new annotation definitions.